--- a/themes/manifeste2017/static/src/sass/config/_colors.scss
+++ b/themes/manifeste2017/static/src/sass/config/_colors.scss
@@ -30,7 +30,7 @@ $color-soundcloud: #f50;
 $color-vimeo: #4bf;
 $color-youtube: #bb0000;
 
-$color-white: #FFFFFF;
+$color-white: #FAFAF4;
 $color-main: #00B3D5;
 $color-gray: #C3C3C3;
 $color-black: #000F24;
