--- a/themes/manifeste2017/static/src/sass/layout/_global.scss
+++ b/themes/manifeste2017/static/src/sass/layout/_global.scss
@@ -33,8 +33,8 @@
     padding-top: 57px;
     position: relative;
     z-index: 2;
-    background: white;
-    
+    background: $color-white;
+
     @include mq($until: lg) {
         padding-top: 48px;
     }
@@ -48,8 +48,8 @@
 
 html, body {
 
-    background: $color-background;
-    color: white;
+    background: $color-white;
+    color: $color-black;
 
     @include mq($until: sm) {
 
