--- a/themes/manifeste2017/static/src/sass/modules/_share-links.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_share-links.scss
@@ -40,7 +40,7 @@ $module: ".share-links";
         }
 
         a {
-            color: white;
+            color: $color-black;
             @include transition(all 0.5s ease-in-out);
 
             &:hover {
