--- a/themes/manifeste2017/static/src/sass/modules/boxes/_media-box.scss
+++ b/themes/manifeste2017/static/src/sass/modules/boxes/_media-box.scss
@@ -25,14 +25,14 @@ $module: ".media-box";
     position: relative;
     display: block;
     text-align: left;
-    
+
     @include margin-bottom(1);
     @include transition(all 0.5s ease-in-out);
 
-    border: 1px solid rgba($color-main, 0.35);
-    @include padding(1);
+    border: 10px solid white;
+    box-shadow: 0 0 1px $color-main;
 
-    height: 550px;
+    height: 380px;
 
     @include mq($until: xs) {
         height: auto;
@@ -52,57 +52,91 @@ $module: ".media-box";
 
     &:hover {
 
-        border: 1px solid rgba($color-main, 1);
         background: $color-main;
 
         .media-box__image-container {
-            background: black;
+            background: $color-main;
         }
 
         .media-box__image {
 
             img {
-                -webkit-filter: grayscale(0);
-                filter: grayscale(0);
+                opacity: 0;
             }
 
         }
 
         .media-box__title {
-            color: $color-background;
+            color: white;
         }
-        .media-box__type {
-            color: $color-background;
+        .media-box__tags {
+            color: white;
         }
         .media-box__subtitle {
-            color: $color-background;
+            color: white;
         }
         .media-box__desc {
-            color: $color-background;
+            color: white;
+            height: auto;
         }
+
+        .media-box__content {
+
+            @include transition(top 0.5s ease-in-out 0s);
+
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            @include padding(.25 .75 .25 .75);
+
+        }
+
     }
 
     &__image-container {
-        background: $color-background;
-        display: block;
+        //background: $color-background;
         @include transition(all 0.5s ease-in-out);
+
+        /* Rectangle 9: */
+        background-image: -webkit-linear-gradient(#6B00D5 0%, #00B3D5 100%);
+        background-image: -o-linear-gradient(#6B00D5 0%, #00B3D5 100%);
+        background-image: linear-gradient(#6B00D5 0%, #00B3D5 100%);
     }
 
     &__placeholder {
 
-        background: $color-main;
+        background-image: -webkit-linear-gradient(#6B00D5 0%, #00B3D5 100%);
+        background-image: -o-linear-gradient(#6B00D5 0%, #00B3D5 100%);
+        background-image: linear-gradient(#6B00D5 0%, #00B3D5 100%);
 
     }
 
     &__content {
-        @include padding(.25 .25 .25 .25);
+        @include padding(.25 .75 .25 .75);
+
+        @include transition(all 0.5s ease-in-out);
 
         position: relative;
         overflow: hidden;
-        display: block;
 
-        @include mq($until: xs) {
-            height: auto;
+        position: absolute;
+        top: 215px;
+        left: 0;
+        width: 100%;
+
+        @include mq($until: lg) {
+            top: 200px;
+        }
+
+        @include mq($until: md) {
+            top: 195px;
+        }
+
+        @include mq($until: sm) {
+            position: relative;
+            top: 0px;
         }
 
         .slider-home & {
@@ -117,7 +151,7 @@ $module: ".media-box";
         position: relative;
         overflow: hidden;
 
-        @include fluid-aspect(427 286);
+        @include fluid-aspect(427 300);
 
         img {
             display: block;
@@ -157,9 +191,9 @@ $module: ".media-box";
     &__type {
 
         text-transform: uppercase;
-        @include font-size(s);
-        @include line-height(1.25);
-        @include typeface(sans-serif);
+        @include font-size(xs);
+        @include line-height(1);
+        @include typeface(serif-condensed);
         @include margin(0 0 0 0);
         font-weight: weight(regular);
         color: $color-main;
@@ -184,10 +218,14 @@ $module: ".media-box";
         @include font-size(s);
         @include line-height(.75);
         @include typeface(serif);
-        @include margin(1 0 .25 0);
+        @include margin(0);
         font-weight: weight(light);
         color: white;
         @include transition(color 0.5s ease-in-out);
+
+        height: 0;
+        padding: 0;
+        overflow: hidden;
 
     }
 
