--- a/themes/manifeste2017/templates/core/inc/related_content.html
+++ b/themes/manifeste2017/templates/core/inc/related_content.html
@@ -31,15 +31,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xxs-16">
+                <div class="col-md-14 col-md-push-1 col-lg-12 col-lg-push-2">
                     <div data-slider-related>
 
                         {% for content in dynamic_content.other %}
                             {% if forloop.counter0 == 0 or forloop.counter|divisibleby:3 %}
                                 <div class="container">
-                                    <div class="row">
+                                    <div class="row-12">
                             {% endif %}
-                                <div class="col-xs-6 col-xs-push-2">
+                                <div class="col-xs-4">
                                     {% if content.content_type.model == "article" %}
                                         {% include "magazine/article/includes/article_card.html" with object=content.content_object  %}
                                     {% elif content.content_type.model == "event" %}
