--- a/themes/manifeste2017/templates/core/inc/related_content_dynamic.html
+++ b/themes/manifeste2017/templates/core/inc/related_content_dynamic.html
@@ -8,16 +8,16 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xxs-16">
+                <div class="col-md-14 col-md-push-1 col-lg-12 col-lg-push-2">
                     <div data-slider-related>
 
                         {% for concrete_object in concrete_objects %}
                             {% if forloop.counter0 == 0 or forloop.counter|divisibleby:3 %}
                                 <div class="container">
-                                    <div class="row">
+                                    <div class="row-12">
                             {% endif %}
 
-                            <div class="col-xs-6 col-xs-push-2">
+                            <div class="col-xs-4">
                                 {% with app_label=concrete_object|app_label_short classname=concrete_object|classname|lower object=concrete_object  %}
                                     {% with app_label|add:"/"|add:classname|add:"/includes/"|add:classname|add:"_card.html" as template %}
                                         {% include template %}
