Update header nav

--- a/themes/manifeste2017/static/src/sass/modules/navs/_nav-header.scss
+++ b/themes/manifeste2017/static/src/sass/modules/navs/_nav-header.scss
@@ -278,7 +278,7 @@ $module: ".nav-header";
 
         @include font-size(l);
         @include line-height($header-pre-height);
-        @include typeface(sans-serif);
+        font-family: 'Oswald', sans-serif;
 
         @include padding-right(1);
 
