--- a/themes/manifeste2017/templates/base.html
+++ b/themes/manifeste2017/templates/base.html
@@ -21,7 +21,7 @@
 	<link rel="shortcut icon" href="{% static "img/favicons/favicon.ico" %}">
 	<link rel="icon" type="image/png" sizes="96x96" href="{% static "img/favicons/favicon-96x96.png" %}">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto+Slab:700|Roboto:300,400,500,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto+Slab:700|Roboto:300,400,500,700,900|Oswald" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqF2kIHtUASr67QP-1bXRd6FPELDS4FSs&libraries=geometry"></script>
 
     {% compress css %}
