--- a/themes/manifeste2017/static/src/sass/modules/boxes/_article-box.scss
+++ b/themes/manifeste2017/static/src/sass/modules/boxes/_article-box.scss
@@ -52,7 +52,10 @@ $module: ".article-box";
         background: $color-main;
 
         .article-box__image-container {
-            background: $color-main;
+            //background: $color-main;
+            background-image: -webkit-linear-gradient($color-main 0%, $color-main 100%);
+            background-image: -o-linear-gradient($color-main 0%, $color-main 100%);
+            background-image: linear-gradient($color-main 0%, $color-main 100%);
         }
 
         .article-box__image {
@@ -86,7 +89,7 @@ $module: ".article-box";
             left: 0;
             width: 100%;
             height: 100%;
-            @include padding(.25 .75 .25 .75);
+            @include padding(.25 .50 .25 .50);
 
         }
 
@@ -113,7 +116,7 @@ $module: ".article-box";
         position: relative;
         overflow: hidden;
 
-        @include fluid-aspect(427 300);
+        @include fluid-aspect(814 600);
 
         img {
             display: block;
@@ -184,7 +187,7 @@ $module: ".article-box";
     }
 
     &__content {
-        @include padding(.25 .75 .25 .75);
+        @include padding(.25 .50 .25 .50);
 
         @include transition(all 0.5s ease-in-out);
 
@@ -192,7 +195,7 @@ $module: ".article-box";
         overflow: hidden;
 
         position: absolute;
-        top: 215px;
+        top: 230px;
         left: 0;
         width: 100%;
 
