--- a/themes/manifeste2017/static/src/sass/modules/boxes/_media-box.scss
+++ b/themes/manifeste2017/static/src/sass/modules/boxes/_media-box.scss
@@ -55,36 +55,50 @@ $module: ".media-box";
 
         background: $color-main;
 
-        .media-box__image-container {
-            background-image: -webkit-linear-gradient($color-main 0%, $color-main 100%);
-            background-image: -o-linear-gradient($color-main 0%, $color-main 100%);
-            background-image: linear-gradient($color-main 0%, $color-main 100%);
+        @include mq($until: sm) {
+            background: white;
+        }
+
+        @include mq($from: sm) {
+            .media-box__image-container {
+                background-image: -webkit-linear-gradient($color-main 0%, $color-main 100%);
+                background-image: -o-linear-gradient($color-main 0%, $color-main 100%);
+                background-image: linear-gradient($color-main 0%, $color-main 100%);
+            }
         }
 
         .media-box__image {
 
             img {
                 opacity: 0;
+                @include mq($until: sm) {
+                    opacity: 1;
+                }
             }
 
             &:after {
                 opacity: 0;
+                @include mq($until: sm) {
+                    opacity: 1;
+                }
             }
 
         }
 
-        .media-box__title {
-            color: white;
-        }
-        .media-box__type {
-            color: white;
-        }
-        .media-box__subtitle {
-            color: white;
-        }
-        .media-box__desc {
-            color: white;
-            height: auto;
+        @include mq($from: sm) {
+            .media-box__title {
+                color: white;
+            }
+            .media-box__type {
+                color: white;
+            }
+            .media-box__subtitle {
+                color: white;
+            }
+            .media-box__desc {
+                color: white;
+                height: auto;
+            }
         }
 
         .media-box__content {
@@ -97,6 +111,10 @@ $module: ".media-box";
             width: 100%;
             height: 100%;
             @include padding(.25 .50 .25 .50);
+
+            @include mq($until: sm) {
+                position: relative;
+            }
 
         }
 
@@ -135,7 +153,7 @@ $module: ".media-box";
         width: 100%;
 
         @include mq($until: lg) {
-            top: 200px;
+            top: 215px;
         }
 
         @include mq($until: md) {
@@ -145,6 +163,7 @@ $module: ".media-box";
         @include mq($until: sm) {
             position: relative;
             top: 0px;
+            display: block;
         }
 
         .slider-home & {
