Update blocks order on homepage

--- a/themes/manifeste2017/templates/index.html
+++ b/themes/manifeste2017/templates/index.html
@@ -23,10 +23,12 @@
 
     {% include "home/inc/slider.html" %}
 
-    {% include "home/inc/bio.html" %}
-
     <div class="section">
         {% include "home/inc/body.html" %}
+    </div>
+
+    <div class="mt4">
+        {% include "home/inc/bio.html" %}
     </div>
 
 {% endblock %}
