Update event list

--- a/themes/manifeste2017/templates/agenda/event_list.html
+++ b/themes/manifeste2017/templates/agenda/event_list.html
@@ -33,23 +33,15 @@
                     <h1 class="section-title section-title--uppercase section-title--main">{% trans "Events" %}</h1>
                 </div>
             </div>
-            <form action="" method="GET">
-                {{ filter_form }}
-                <input type="submit" value="Submit" />
-            </form>
 
-            {% keywords_for mezzanine_agenda.event as tags %}
-            {% if tags %}
-                {% for t in tags %}
-                    {% if not t|tag_is_excluded %}
-                        <li class="nav-tree__item">
-                            <a class="nav-tree__link--filter nav-tree__link{% if tag == t %} active{% endif %}" href="{% if tag == t %}{% url 'event_list' %}{% else %}{% url "event_list_tag" t.slug %}{% endif %}">
-                                {{ t }} {% if tag == t %}<i class="fa fa-times"></i>{% endif %}
-                            </a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
+            <div class="row">
+                <div class="mb2 col-md-12 col-md-push-2">
+                    <form action="" method="GET">
+                        {{ filter_form }}
+                        <input type="submit" value="Submit" />
+                    </form>
+                </div>
+            </div>
 
             <div class="row">
                 <div class="mb2 col-md-12 col-md-push-2 page__content" data-summary-content>
@@ -60,6 +52,7 @@
                     </div>
                 </div>
             </div>
+            {% comment %}
             {% if past_events %}
                 <div class="row">
                     <div class="col-sm-16 col-md-12 col-md-push-2 tac">
@@ -76,6 +69,7 @@
                     </div>
                 </div>
             {% endif %}
+            {% endcomment %}
         </div>
     </div>
 {% endblock %}
