--- a/themes/manifeste2017/static/src/sass/modules/_map-infowindow.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_map-infowindow.scss
@@ -18,22 +18,35 @@
 // You should have received a copy of the GNU Affero General Public License
 // along with this program. If not, see <http://www.gnu.org/licenses/>.
 
+.gm-style-iw {
+   width: 512px !important;
+   top: 90px !important;
+   left: 0 !important;
+   background-color: $color-main;
+   box-shadow: 0 1px 6px rgba(178, 178, 178, 0.6);
+   border: 1px solid rgba(72, 181, 233, 0.6);
+   border-radius: 2px 2px 0 0;
+}
+
 $module: ".map-infowindow";
 
 #{$module} {
 
-    padding: 24px;
-    padding-right: 1px;
+    padding: 12px 0;
 
     @include clearfix;
 
-    color: $color-background;
+    color: black;
+    background: $color-main;
+    width: 512px;
 
     &__content {
 
         //float: left;
-        text-align: center;
-        max-width: 200px;
+        text-align: left;
+        width: 250px;
+        float: left;
+        margin-left: 12px;
 
         p {
             @include margin(0);
@@ -70,13 +83,13 @@ $module: ".map-infowindow";
     &__image {
 
         //float: left;
-        width: 140px;
-        margin: 0 auto;
-        @include margin-bottom(1);
+        width: 238px;
+        margin: 0 0 0 12px;
         text-align: center;
+        float: left;
 
         img {
-            width: 140px;
+            width: 238px;
             height: auto;
         }
 
