Home slider implementation

--- a/themes/manifeste2017/static/src/sass/pages/_home.scss
+++ b/themes/manifeste2017/static/src/sass/pages/_home.scss
@@ -26,7 +26,7 @@ $module: ".home";
         > a {
             background: transparent;
             &:before {
-                color: #F2EDDC;
+                color: $color-black;
                 font-size: 40px;
             }
         }
