Update home slider on mobile devices

--- a/themes/manifeste2017/static/src/sass/pages/_home.scss
+++ b/themes/manifeste2017/static/src/sass/pages/_home.scss
@@ -39,7 +39,11 @@ $module: ".home";
     }
 
     .calendar {
-        @include margin-top(5);
+        @include margin-top(7);
+
+        @include mq($until: sm) {
+            display: none;
+        }
     }
 
 }
