Add filters to events

--- a/themes/manifeste2017/static/src/sass/modules/_section-title.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_section-title.scss
@@ -10,9 +10,10 @@ $module: ".section-title";
     color: $color-black;
     display: inline-block;
     line-height: 1.5em;
+    letter-spacing: 1px;
 
-    @include margin-bottom(4);
-    @include margin-top(5);
+    @include margin-bottom(2);
+    @include margin-top(3);
 
     @include mq($until: md) {
 
