--- a/themes/manifeste2017/static/src/sass/pages/_home.scss
+++ b/themes/manifeste2017/static/src/sass/pages/_home.scss
@@ -38,7 +38,7 @@ $module: ".home";
         }
     }
 
-    .calendar {
+    #jsEventsHomeForm {
         @include margin-top(7);
 
         @include mq($until: sm) {
