--- a/themes/manifeste2017/templates/includes/calendar.html
+++ b/themes/manifeste2017/templates/includes/calendar.html
@@ -1,146 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-16">
-            <form action="{% url 'event_list' %}" method="GET">
+            <form action="{% url 'event_list' %}" method="GET" id="jsEventsHomeForm">
                 {{ event_calendar_form }}
-                <input type="submit" value="Submit" />
             </form>
-            <table class="calendar">
-                <tr>
-                    <td>
-                        <br />
-                        JUIN
-                    </td>
-                    <td>
-                        <span>JE</span><br />
-                        01
-                    </td>
-                    <td>
-                        <span>VE</span><br />
-                        02
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">SA</span><br />
-                        03
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">DI</span><br />
-                        04
-                    </td>
-                    <td>
-                        <span>LU</span><br />
-                        05
-                    </td>
-                    <td>
-                        <span>MA</span><br />
-                        06
-                    </td>
-                    <td>
-                        <span>ME</span><br />
-                        07
-                    </td>
-                    <td>
-                        <span>JE</span><br />
-                        08
-                    </td>
-                    <td>
-                        <span>VE</span><br />
-                        09
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">SA</span><br />
-                        10
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">DI</span><br />
-                        11
-                    </td>
-                    <td>
-                        <span>LU</span><br />
-                        12
-                    </td>
-                    <td>
-                        <span>MA</span><br />
-                        13
-                    </td>
-                    <td>
-                        <span>ME</span><br />
-                        14
-                    </td>
-                    <td>
-                        <span>JE</span><br />
-                        15
-                    </td>
-                    <td>
-                        <span>VE</span><br />
-                        16
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">SA</span><br />
-                        17
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">DI</span><br />
-                        18
-                    </td>
-                    <td>
-                        <span>LU</span><br />
-                        19
-                    </td>
-                    <td>
-                        <span>MA</span><br />
-                        20
-                    </td>
-                    <td>
-                        <span>ME</span><br />
-                        21
-                    </td>
-                    <td>
-                        <span>JE</span><br />
-                        22
-                    </td>
-                    <td>
-                        <span>VE</span><br />
-                        23
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">SA</span><br />
-                        24
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">DI</span><br />
-                        25
-                    </td>
-                    <td>
-                        <span>LU</span><br />
-                        26
-                    </td>
-                    <td>
-                        <span>MA</span><br />
-                        27
-                    </td>
-                    <td>
-                        <span>ME</span><br />
-                        28
-                    </td>
-                    <td>
-                        <span>JE</span><br />
-                        29
-                    </td>
-                    <td>
-                        <span>VE</span><br />
-                        30
-                    </td>
-                    <td>
-                        <span class="calendar__weekend">SA</span><br />
-                        01
-                    </td>
-                    <td>
-                        <br />
-                        JUILLET
-                    </td>
-                </tr>
-            </table>
         </div>
     </div>
 </div>
