Fix Instagram img width

--- a/themes/manifeste2017/static/src/sass/modules/_instagram.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_instagram.scss
@@ -8,6 +8,10 @@ $module: ".instagram";
         float: left;
         width: 33.33%;
 
+        img {
+            width: 100%;
+        }
+
         span {
 
             display: none;
