--- a/themes/manifeste2017/templates/network/person_list.html
+++ b/themes/manifeste2017/templates/network/person_list.html
@@ -1,21 +1,58 @@
 {% extends "pages/page.html" %}
-{% load mezzanine_tags keyword_tags i18n organization_tags pages_tags %}
+{% load i18n future mezzanine_tags event_tags keyword_tags disqus_tags organization_tags staticfiles pages_tags %}
 
-{% block page_content %}
+{% block meta_title %}
+    {% if page %}
+        {{ page.title }}
+    {% else %}
+        {% trans "Artists" %}
+    {% endif %}
+{% endblock %}
 
-    {% for person in persons %}
-        {{ person.first_name }}<br>
-        {{ person.last_name }}<br>
-        {% url 'organization-network-person-detail' person.slug %}<br>
-        {% with person.activities.first as activity %}
-            {{ activity.status }}
-        {% endwith%}
-        {% with person.images.all|get_type:'page_featured' as card_images %}
-            {% if card_images %}
-                <div class="page__image-container">
-                    <img style="width:100%;" class="lazyload" src="{{ MEDIA_URL }}{% thumbnail card_images.first 1030 400 top=0.5 %}" alt="person"/>
+{% block meta_keywords %}
+    {% metablock %}
+        {% keywords_for page as keywords %}
+        {% for keyword in keywords %}
+            {% if not forloop.first %}, {% endif %}
+            {{ keyword }}
+        {% endfor %}
+    {% endmetablock %}
+{% endblock %}
+
+{% block meta_description %}
+    {% metablock %}
+        {{ page.description }}
+    {% endmetablock %}
+{% endblock %}
+
+
+{% block main %}
+
+<div class="page page--{% spaceless %}{% block page_class %}{% endblock %}{% endspaceless %}">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-16 col-md-10 col-md-push-3 tac">
+                <h1 class="section-title section-title--big section-title--uppercase">{% trans "Artists" %}</h1>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="mb2 col-md-14 col-md-push-1 col-lg-12 col-lg-push-2 page__content" data-summary-content>
+                <div class="page__content">
+                    <div class="container">
+                        <div class="row-12">
+                            {% for person in persons %}
+                                <div class="col-xs-4">
+                                    {% include "network/inc/person/person_card_square.html" %}
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
                 </div>
-            {% endif %}
-        {% endwith %}
-    {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
