--- a/themes/manifeste2017/static/src/sass/modules/_map-infowindow.scss
+++ b/themes/manifeste2017/static/src/sass/modules/_map-infowindow.scss
@@ -26,6 +26,10 @@
    box-shadow: 0 1px 6px rgba(178, 178, 178, 0.6);
    border: 1px solid rgba(72, 181, 233, 0.6);
    border-radius: 2px 2px 0 0;
+
+   & + * {
+       right: 64px !important;
+   }
 }
 
 $module: ".map-infowindow";
